@@ -2,6 +2,7 @@
   <dictionary name="Cais">
     <words>
       <w>edwardcaissie</w>
+      <w>headerleft</w>
       <w>intval</w>
       <w>jellybeen</w>
       <w>shortlink</w>
