@@ -10,6 +10,7 @@ Changelog: July 14, 2013
 = CSS =
 * Added ordered list styles for pages with comments
 * Added classes to author "About" box details for easier display manipulation
+* Added site title and description id to appropriate HTML container
 * Adjusted '.wp-caption img' properties
 * Adjusted 'li.text_widget' margin values
 * Adjusted various CSS elements and properties to display TUT data more correctly
